--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "lasserafn/php-initial-avatar-generator": "^4.2",
         "livewire/livewire": "^3.0",
+        "livewire/volt": "^1.6",
         "robthree/twofactorauth": "^1.8",
         "spatie/laravel-permission": "^5.9"
     },
