--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "kkomelin/laravel-translatable-string-exporter": "^1.19",
+        "larastan/larastan": "^2.7",
         "laravel/breeze": "^1.19",
         "laravel/pint": "^1.5",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
         "pestphp/pest": "^2.00",
         "pestphp/pest-plugin-type-coverage": "^2.0",
         "spatie/laravel-ignition": "^2.0"
